<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">大人ゴコロ</string>
    <string name="map_key">AIzaSyC6hA1bcLw8K6k7QRwtxER78IURjEsYs-8</string>
    <string name="empty"></string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="home">ホーム</string>
    <string name="all">新着情報</string>
    <string name="flyer">チラシ</string>
    <string name="flyer0">FLYER</string>
    <string name="flyer1">Flyer</string>
    <string name="info">お知らせ</string>
    <string name="info0">INFO</string>
    <string name="info1">Info</string>
    <string name="info_list">お知らせ一覧</string>
    <string name="shopping">ショッピング</string>
    <string name="shopping0">SHOPPING</string>
    <string name="shopping1">Shopping</string>
    <string name="item_list">ITEM LIST</string>
    <string name="coupon">クーポン</string>
    <string name="coupon0">COUPON</string>
    <string name="coupon1">Coupon</string>
    <string name="coupon_get">クーポン取得</string>
    <string name="coupon_get0">GET COUPON</string>
    <string name="coupon_use">クーポン使用</string>
    <string name="coupon_use0">USE COUPON</string>
    <string name="coupon_copy_clipboard">クーポンコードをクリップボードにコピーしました</string>
    <string name="webview">ITEM</string>
    <string name="genre_list">カテゴリ一覧</string>
    <string name="goods_list">商品一覧</string>
    <string name="other_goods">他の商品を見る</string>
    <string name="action_settings">設定</string>
    <string name="item_count">アイテム数：</string>
    <string name="getcoupon">クーポンをゲットする！＞</string>
    <string name="no_coupon">申し訳ございません。\n現在、取得できるクーポンがありません。</string>
    <string name="no_getcoupon">申し訳ございません。\n現在、取得済みクーポンがありません。</string>
    <string name="yen">円</string>
    <string name="search">検索</string>
    <string name="coupon_shutokuzumi">取得済みクーポン</string>
    <string name="coupon_tojiru">閉じる</string>
    <string name="fitting0">FITTING</string>
    <string name="fitting1">Fitting</string>
    <string name="map0">MAP</string>
    <string name="map1">Map</string>
    <string name="barcode0">BARCODE</string>
    <string name="barcode1">Barcode</string>
    <string name="stamp0">STAMP</string>
    <string name="stamp1">Stamp</string>
    <string name="sns0">SNS</string>
    <string name="sns1">Sns</string>
    <string name="twitter0">TWITTER</string>
    <string name="twitter1">Twitter</string>ogin
    <string name="login0">LOGIN</string>
    <string name="login1">LOGIN</string>
    <string name="paypal0">PAYPAL</string>
    <string name="paypal1">PAYPAL</string>
    <string name="reminder0">REMINDER</string>
    <string name="reminder1">Reminder</string>
    <string name="setting">設定</string>
    <string name="setting0">SETTING</string>
    <string name="setting1">Setting</string>
    <string name="calendar">カレンダー</string>
    <string name="calendar0">CALENDAR</string>

        <!-- default theme -->
    <drawable name="actionbar_background">#FFFFFF</drawable>
    <drawable name="theme_text_color">#666</drawable>
    <color name="tab_text_color">#666</color>
    <color name="tab_selected">#ccc</color>
    <color name="tab_unselected">#fff</color>

    <!-- cute theme-->
    <drawable name="actionbar_background_cute">#FFF9F9</drawable>
    <drawable name="theme_text_color_cute">#e02849</drawable>
    <color name="tab_text_color_cute">#666</color>
    <color name="tab_selected_cute">#e02849</color>
    <color name="tab_unselected_cute">#fff9f9</color>

    <color name="actionbar_background">#FFFFFF</color>
    <!-- <drawable name="theme_text_color">#A1522E</drawable> -->
    <color name="theme_text_color">#666</color>
    <color name="info_all_color">#ff6666</color>
    <color name="info_notice_color">#0080ff</color>
    <color name="info_flyer_color">#8800ff</color>
    <color name="info_coupon_color">#008800</color>
    <color name="background_theme">#fff</color>
    <!-- <color name="background_theme">#ffebcc</color> -->
    <color name="background_sub_theme">#402615</color>
    <color name="background_fragment">#fff</color>
    <color name="tab_title_color">#231815</color>

    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!--FaceBook-->
    <string name="facebook">facebook</string>
    <string name="app_id">1716893145204841</string>
    <string name="Facebook_msg">ログインボタンをタップして認証を続行して下さい。</string>
    <string name="Facebook_title">Facebook_Title</string>
    <string name="cancel">cancel</string>
    <string name="error">error</string>
    <string name="success">success</string>
    <string name="successfully_posted_post">successfully_posted_post</string>
    <string name="ok">ok</string>
    <string name="hello_user">Hello!!</string>
    <string name="cancelled">cancelled</string>
    <string name="permission_not_granted">permission_not_granted</string>
    <string name="treasure">宝物</string>

    <!--Twitter-->
    <string name="twitter">twitter</string>
    <string name="app_nameForTwitter">MyTwitter</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="twitter_consumer_key">N1qd3k7y8mT73CZ2hAVxh4JTr</string>
    <string name="twitter_consumer_secret">uQqLoh6lV9KQn6F7o6JyRiQkDueNNPIlrR8GwsmW7P95Q8OZ8d</string>
    <string name="twitter_callback_url">gabu://twitter</string>
    <string name="screenName">test</string>
    <string name="repliseName">test</string>

    <string name="gmail">gmail</string>
    <string name="title_activity_radar">RadarActivity</string>
    <string name="title_activity_gpslocation">GPSLocationActivity</string>
    <string name="title_activity_get_question">GetQuestionActivity</string>

    <!--Reminder-->
    <string name="reminder_explanation">プレゼントを渡したい人の誕生日等や記念日などを入れておくと、日付が近くなったら(20日前)通知を受け取ることができます。</string>
    <string name="reminder_noties_name">通知したい日付の名前</string>
    <string name="reminder_noties_day">通知したい日付の月日</string>
    <string name="reminder_fathers_day">父の日</string>
    <string name="reminder_mothers_day">母の日</string>
    <string name="reminder_respect_for_the_aged_day">敬老の日</string>
    <string name="reminder_childrens_day">子供の日</string>
    <string name="reminder_valentines_day">バレンタインデー</string>
    <string name="reminder_save">保存</string>
    <string name="reminder_dokujituuci_setei">独自通知設定</string>
    <string name="reminder_teikei_noties">定型通知設定</string>
    <string name="clear">clear</string>
    <string name="left">left</string>
    <string name="center">center</string>

    <!--shopping: spinner-->
    <string name="goods_default_amount">１個</string>
    <string-array name="goods_amount_array">

        <item>１個</item>
        <item>２個</item>
        <item>３個</item>
        <item>４個</item>
        <item>５個</item>
        <item>６個</item>
        <item>７個</item>
        <item>８個</item>
        <item>９個</item>
        <item>１０個</item>
        <item>その他</item>

    </string-array>

    <!--shopping: spinner_dialog-->
    <string name="dialog_instruction">欲しい商品の数を入力して下さい</string>
    <string name="dialog_item_amount_label">個</string>
    <string name="dialog_button_cancel">cancel</string>
    <string name="dialog_button_ok">ok</string>

    <!--setting-->
    <string name="sound_text">サウンド</string>
    <string name="notification_text">プッシュ通知</string>
    <string name="notification_pay">アプリ内決済</string>
    <string name="notification_pay_hint">ONにすると、Lineアプリの決済機能を使ってお支払いをする事ができます。
        \n※Lineでお支払いの場合、ポイントの付与は行われません。</string>
    <!--Coupon Tab-->
    <string name="coupon_tab_delivered">配布中のクーポン</string>
    <string name="coupon_tab_get">獲得したクーポン</string>
</resources>
