<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:background="@color/background_fragment" >

	<LinearLayout
		android:id="@+id/coupon_tab"
		android:layout_width="match_parent"
		android:layout_height="40dp"
		android:orientation="horizontal"
		android:layout_margin="10dp">

		<Button
			android:id="@+id/btn_coupon_delivered"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:textColor="@color/white"
			android:text="@string/coupon_tab_delivered"
			android:background="@drawable/btn_coupon_delivered_brown"
			android:layout_weight="1"/>
		<Button
			android:id="@+id/btn_coupon_get"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:text="@string/coupon_tab_get"
			android:background="@drawable/btn_coupon_get_white"
			android:layout_weight="1"/>


	</LinearLayout>


	<RelativeLayout
		android:layout_below="@+id/coupon_tab"
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:background="@color/background_fragment" >
		<android.support.v4.view.ViewPager
			android:id="@+id/couponpager"
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			android:visibility="gone"/>
		<jp.co.jokerpiece.piecebase.util.ViewPagerIndicator
			android:id="@+id/indicator"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_alignTop="@id/couponpager"
			android:layout_marginTop="5dp"
			android:visibility="gone" />

		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			android:gravity="center"
			android:layout_alignParentTop="true"
			android:layout_alignParentLeft="true"
			android:layout_alignParentStart="true">
			<TextView
				android:id="@+id/tv_nocoupon"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_margin="40dp"
				android:textSize="18sp"
				android:textColor="#000000"
				android:text="@string/no_coupon"
				android:visibility="gone" />
		</LinearLayout>

	</RelativeLayout>

</RelativeLayout>

